<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="#93DCF9"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/icon_person"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_person_placeholder"
            android:background="@drawable/circle_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/person_icon" />

        <TextView
            android:id="@+id/text_person_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/person_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/icon_person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/icon_person" />

        <TextView
            android:id="@+id/text_birth_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/_24_june_2026"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="@id/text_person_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_person_name" />

        <TextView
            android:id="@+id/text_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_21_years_old"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="@id/text_person_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_birth_date"
            app:layout_constraintBottom_toBottomOf="@id/icon_person"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>