<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <include
                android:id="@+id/card_welcome"
                layout="@layout/card_welcome_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <include
                android:id="@+id/card_nearest_birthday"
                layout="@layout/card_birthday_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/card_welcome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:id="@+id/navigation_buttons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/card_nearest_birthday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_see_calendar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/see_the_calendar"
                    android:paddingVertical="12dp"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    app:backgroundTint="#81C784"
                    app:cornerRadius="5dp"
                    app:icon="@drawable/ic_arrow_right"
                    app:iconGravity="end"
                    app:iconTint="@android:color/black"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_birthday_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/birthday_list"
                    android:paddingVertical="12dp"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    app:backgroundTint="#81C784"
                    app:cornerRadius="5dp"
                    app:icon="@drawable/ic_arrow_right"
                    app:iconGravity="end"
                    app:iconTint="@android:color/black"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_current_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/current_event"
                    android:paddingVertical="12dp"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    app:backgroundTint="#81C784"
                    app:cornerRadius="5dp"
                    app:icon="@drawable/ic_arrow_right"
                    app:iconGravity="end"
                    app:iconTint="@android:color/black"/>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>